# pgaf

./: Cargo.toml  Makefile  README.md  pgaf.control
.cargo/: config.toml
specs/: index-access-method.md
src/: client.rs  e2e_tests.rs  functions.rs  lib.rs  query.rs  triggers.rs
src/index_am/: build.rs  cost.rs  ctid.rs  mod.rs  operator.rs  options.rs  scan.rs  vacuum.rs
