[package]
name = "pgaf"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pgrx_embed)'] }

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgaf"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = { version = "0.17.0", default-features = false }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
pgrx-tests = "0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
